Refactor SplitBrainHandlerTest [HZG-184] (#3176)
The motivation behind this refactoring is to switch from HazelcastInstanceFactory to TestHazelcastInstanceFactory. To
facilitate this change, we
1. pass instance name via `Config#instanceName`, and
2. centralize instance creation by using FirewallingNodeContext for all tests.

In the subsequent PR, TestHazelcastInstanceFactory will support customizing NodeContext, which is the final step to get rid of direct HazelcastInstanceFactory usage.

GitOrigin-RevId: 6ea0755ed1fa7261bfa3ef33ccd5e7cb27d179e2