@@ -21,7 +21,6 @@ import com.hazelcast.config.JoinConfig;
 import com.hazelcast.config.ListenerConfig;
 import com.hazelcast.config.NetworkConfig;
 import com.hazelcast.config.TcpIpConfig;
-import com.hazelcast.core.Hazelcast;
 import com.hazelcast.core.HazelcastInstance;
 import com.hazelcast.core.LifecycleEvent;
 import com.hazelcast.core.LifecycleEvent.LifecycleState;
@@ -43,8 +42,7 @@ import org.junit.Test;
 import org.junit.experimental.categories.Category;
 import org.junit.runner.RunWith;
 
-import java.util.Arrays;
-import java.util.Collections;
+import javax.annotation.Nonnull;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.BlockingQueue;
@@ -53,15 +51,17 @@ import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.BiFunction;
+import java.util.function.Function;
 
 import static com.hazelcast.cluster.ClusterState.ACTIVE;
 import static com.hazelcast.cluster.ClusterState.FROZEN;
-import static com.hazelcast.instance.impl.HazelcastInstanceFactory.newHazelcastInstance;
 import static com.hazelcast.internal.cluster.impl.AdvancedClusterStateTest.changeClusterStateEventually;
 import static com.hazelcast.test.Accessors.getAddress;
 import static com.hazelcast.test.Accessors.getNode;
 import static com.hazelcast.test.SplitBrainTestSupport.blockCommunicationBetween;
 import static com.hazelcast.test.SplitBrainTestSupport.unblockCommunicationBetween;
+import static java.util.Collections.emptyList;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
@@ -74,6 +74,11 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
     @After
     public void killAllHazelcastInstances() {
         HazelcastInstanceFactory.terminateAll();
+    }
+
+    private static HazelcastInstance newHazelcastInstance(@Nonnull Config config) {
+        return HazelcastInstanceFactory
+                .newHazelcastInstance(config, config.getInstanceName(), new FirewallingNodeContext());
     }
 
     @Test
@@ -120,8 +125,8 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
         join2.getMulticastConfig().setEnabled(true);
         join2.getTcpIpConfig().addMember("127.0.0.1");
 
-        HazelcastInstance h1 = Hazelcast.newHazelcastInstance(config1);
-        HazelcastInstance h2 = Hazelcast.newHazelcastInstance(config2);
+        HazelcastInstance h1 = newHazelcastInstance(config1);
+        HazelcastInstance h2 = newHazelcastInstance(config2);
         LifecycleCountingListener l = new LifecycleCountingListener();
         h2.getLifecycleService().addLifecycleListener(l);
 
@@ -141,7 +146,7 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
         BlockingQueue<LifecycleState> eventQueue = new LinkedBlockingQueue<>();
 
         LifecycleCountingListener() {
-            for (LifecycleEvent.LifecycleState state : LifecycleEvent.LifecycleState.values()) {
+            for (LifecycleState state : LifecycleState.values()) {
                 counter.put(state, new AtomicInteger(0));
             }
         }
@@ -152,14 +157,14 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
             eventQueue.offer(event.getState());
         }
 
-        int getCount(LifecycleEvent.LifecycleState state) {
+        int getCount(LifecycleState state) {
             return counter.get(state).get();
         }
 
-        boolean waitFor(LifecycleEvent.LifecycleState state, int seconds) {
+        boolean waitFor(LifecycleState state, int seconds) {
             long remainingMillis = TimeUnit.SECONDS.toMillis(seconds);
             while (remainingMillis >= 0) {
-                LifecycleEvent.LifecycleState received;
+                LifecycleState received;
                 try {
                     long now = Clock.currentTimeMillis();
                     received = eventQueue.poll(remainingMillis, TimeUnit.MILLISECONDS);
@@ -208,9 +213,9 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
         join.getTcpIpConfig().setEnabled(!multicast);
         join.getTcpIpConfig().addMember("127.0.0.1");
 
-        HazelcastInstance h1 = Hazelcast.newHazelcastInstance(config);
-        HazelcastInstance h2 = Hazelcast.newHazelcastInstance(config);
-        HazelcastInstance h3 = Hazelcast.newHazelcastInstance(config);
+        HazelcastInstance h1 = newHazelcastInstance(config);
+        HazelcastInstance h2 = newHazelcastInstance(config);
+        HazelcastInstance h3 = newHazelcastInstance(config);
 
         assertClusterSize(3, h1, h3);
         assertClusterSizeEventually(3, h2);
@@ -225,7 +230,6 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
             public void memberRemoved(MembershipEvent membershipEvent) {
                 splitLatch.countDown();
             }
-
         });
 
         final CountDownLatch mergeLatch = new CountDownLatch(1);
@@ -252,8 +256,8 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
         Config c3 = buildConfig(false, 15703);
         Config c4 = buildConfig(false, 15701);
 
-        List<String> clusterOneMembers = Arrays.asList("127.0.0.1:15702", "127.0.0.1:15704");
-        List<String> clusterTwoMembers = Arrays.asList("127.0.0.1:15703", "127.0.0.1:15701");
+        List<String> clusterOneMembers = List.of("127.0.0.1:15702", "127.0.0.1:15704");
+        List<String> clusterTwoMembers = List.of("127.0.0.1:15703", "127.0.0.1:15701");
 
         c1.getNetworkConfig().getJoin().getTcpIpConfig().setMembers(clusterOneMembers);
         c2.getNetworkConfig().getJoin().getTcpIpConfig().setMembers(clusterOneMembers);
@@ -265,25 +269,24 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
 
         c4.addListenerConfig(new ListenerConfig(new MergedEventLifeCycleListener(latch)));
 
-        HazelcastInstance h1 = Hazelcast.newHazelcastInstance(c1);
-        HazelcastInstance h2 = Hazelcast.newHazelcastInstance(c2);
-        HazelcastInstance h3 = Hazelcast.newHazelcastInstance(c3);
-        HazelcastInstance h4 = Hazelcast.newHazelcastInstance(c4);
+        HazelcastInstance h1 = newHazelcastInstance(c1);
+        HazelcastInstance h2 = newHazelcastInstance(c2);
+        HazelcastInstance h3 = newHazelcastInstance(c3);
+        HazelcastInstance h4 = newHazelcastInstance(c4);
 
         // We should have two clusters of two
         assertClusterSize(2, h1, h2);
         assertClusterSize(2, h3, h4);
 
-        List<String> allMembers = Arrays.asList("127.0.0.1:15701", "127.0.0.1:15704", "127.0.0.1:15703",
-                "127.0.0.1:15702");
+        List<String> allMembers = List.of("127.0.0.1:15701", "127.0.0.1:15704", "127.0.0.1:15703", "127.0.0.1:15702");
 
         /*
          * This simulates restoring a network connection between h3 and the
-         * other cluster. But it only make h3 aware of the other cluster so for
+         * other cluster. But it only makes h3 aware of the other cluster so for
          * h4 to restart it will have to be notified by h3.
          */
         h3.getConfig().getNetworkConfig().getJoin().getTcpIpConfig().setMembers(allMembers);
-        h4.getConfig().getNetworkConfig().getJoin().getTcpIpConfig().clear().setMembers(Collections.emptyList());
+        h4.getConfig().getNetworkConfig().getJoin().getTcpIpConfig().clear().setMembers(emptyList());
 
         assertTrue(latch.await(60, TimeUnit.SECONDS));
 
@@ -298,34 +301,33 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
         Config c2 = buildConfig(false, 25704);
         Config c3 = buildConfig(false, 25703);
 
-        List<String> clusterOneMembers = Arrays.asList("127.0.0.1:25701");
-        List<String> clusterTwoMembers = Arrays.asList("127.0.0.1:25704");
-        List<String> clusterThreeMembers = Arrays.asList("127.0.0.1:25703");
+        List<String> clusterOneMembers = List.of("127.0.0.1:25701");
+        List<String> clusterTwoMembers = List.of("127.0.0.1:25704");
+        List<String> clusterThreeMembers = List.of("127.0.0.1:25703");
 
         c1.getNetworkConfig().getJoin().getTcpIpConfig().setMembers(clusterOneMembers);
         c2.getNetworkConfig().getJoin().getTcpIpConfig().setMembers(clusterTwoMembers);
         c3.getNetworkConfig().getJoin().getTcpIpConfig().setMembers(clusterThreeMembers);
 
-        final HazelcastInstance h1 = Hazelcast.newHazelcastInstance(c1);
-        final HazelcastInstance h2 = Hazelcast.newHazelcastInstance(c2);
+        final HazelcastInstance h1 = newHazelcastInstance(c1);
+        final HazelcastInstance h2 = newHazelcastInstance(c2);
 
         final CountDownLatch latch = new CountDownLatch(1);
         c3.addListenerConfig(new ListenerConfig((LifecycleListener) event -> {
-            if (event.getState() == LifecycleState.MERGING) {
-                h1.shutdown();
-            } else if (event.getState() == LifecycleState.MERGED) {
-                latch.countDown();
+            switch (event.getState()) {
+                case MERGING -> h1.shutdown();
+                case MERGED -> latch.countDown();
             }
         }));
 
-        final HazelcastInstance h3 = Hazelcast.newHazelcastInstance(c3);
+        final HazelcastInstance h3 = newHazelcastInstance(c3);
 
         // We should have three clusters of one
         assertClusterSize(1, h1);
         assertClusterSize(1, h2);
         assertClusterSize(1, h3);
 
-        List<String> allMembers = Arrays.asList("127.0.0.1:25701", "127.0.0.1:25704", "127.0.0.1:25703");
+        List<String> allMembers = List.of("127.0.0.1:25701", "127.0.0.1:25704", "127.0.0.1:25703");
 
         h3.getConfig().getNetworkConfig().getJoin().getTcpIpConfig().setMembers(allMembers);
 
@@ -337,31 +339,24 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
     }
 
     private static Config buildConfig(boolean multicastEnabled, int port) {
-        Config c = smallInstanceConfigWithoutJetAndMetrics();
-        c.setProperty(ClusterProperty.MERGE_FIRST_RUN_DELAY_SECONDS.getName(), "5");
-        c.setProperty(ClusterProperty.MERGE_NEXT_RUN_DELAY_SECONDS.getName(), "3");
+        Config config = smallInstanceConfigWithoutJetAndMetrics();
+        config.setProperty(ClusterProperty.MERGE_FIRST_RUN_DELAY_SECONDS.getName(), "5");
+        config.setProperty(ClusterProperty.MERGE_NEXT_RUN_DELAY_SECONDS.getName(), "3");
 
-        NetworkConfig networkConfig = c.getNetworkConfig();
+        NetworkConfig networkConfig = config.getNetworkConfig();
         networkConfig.setPort(port).setPortAutoIncrement(false);
         networkConfig.getJoin().getMulticastConfig().setEnabled(multicastEnabled);
         networkConfig.getJoin().getTcpIpConfig().setEnabled(!multicastEnabled);
-        return c;
+        return config;
     }
 
     @Test
     public void testMulticastJoin_DuringSplitBrainHandlerRunning() throws InterruptedException {
         String clusterName = generateRandomString(10);
         final CountDownLatch latch = new CountDownLatch(1);
-        ListenerConfig mergeListenerConfig = new ListenerConfig(new LifecycleListener() {
-            public void stateChanged(final LifecycleEvent event) {
-                switch (event.getState()) {
-                    case MERGING:
-                    case MERGED:
-                        latch.countDown();
-                        break;
-                    default:
-                        break;
-                }
+        ListenerConfig mergeListenerConfig = new ListenerConfig((LifecycleListener) event -> {
+            switch (event.getState()) {
+                case MERGING, MERGED -> latch.countDown();
             }
         });
 
@@ -374,7 +369,7 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
         config1.setProperty(ClusterProperty.MERGE_FIRST_RUN_DELAY_SECONDS.getName(), "0");
         config1.setProperty(ClusterProperty.MERGE_NEXT_RUN_DELAY_SECONDS.getName(), "0");
         config1.addListenerConfig(mergeListenerConfig);
-        HazelcastInstance hz1 = Hazelcast.newHazelcastInstance(config1);
+        HazelcastInstance hz1 = newHazelcastInstance(config1);
 
         sleepSeconds(1);
 
@@ -386,7 +381,7 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
         config2.setProperty(ClusterProperty.MERGE_FIRST_RUN_DELAY_SECONDS.getName(), "0");
         config2.setProperty(ClusterProperty.MERGE_NEXT_RUN_DELAY_SECONDS.getName(), "0");
         config2.addListenerConfig(mergeListenerConfig);
-        HazelcastInstance hz2 = Hazelcast.newHazelcastInstance(config2);
+        HazelcastInstance hz2 = newHazelcastInstance(config2);
 
         assertClusterSizeEventually(2, hz1, hz2);
         assertFalse("Latch should not be countdown!", latch.await(5, TimeUnit.SECONDS));
@@ -404,22 +399,26 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
     }
 
     private void testClusterMerge_when_split_not_detected_by_master(boolean multicastEnabled) {
-        Config config = smallInstanceConfigWithoutJetAndMetrics();
         String clusterName = generateRandomString(10);
-        config.setClusterName(clusterName);
-        config.setProperty(ClusterProperty.MERGE_FIRST_RUN_DELAY_SECONDS.getName(), "10");
-        config.setProperty(ClusterProperty.MERGE_NEXT_RUN_DELAY_SECONDS.getName(), "10");
-        config.setProperty(ClusterProperty.MAX_NO_HEARTBEAT_SECONDS.getName(), "15");
-        config.setProperty(ClusterProperty.MAX_JOIN_SECONDS.getName(), "10");
-        config.setProperty(ClusterProperty.MAX_JOIN_MERGE_TARGET_SECONDS.getName(), "10");
+        Function<String, Config> configFn = instanceName -> {
+            Config config = smallInstanceConfigWithoutJetAndMetrics();
+            config.setClusterName(clusterName);
+            config.setInstanceName(instanceName);
+            config.setProperty(ClusterProperty.MERGE_FIRST_RUN_DELAY_SECONDS.getName(), "10");
+            config.setProperty(ClusterProperty.MERGE_NEXT_RUN_DELAY_SECONDS.getName(), "10");
+            config.setProperty(ClusterProperty.MAX_NO_HEARTBEAT_SECONDS.getName(), "15");
+            config.setProperty(ClusterProperty.MAX_JOIN_SECONDS.getName(), "10");
+            config.setProperty(ClusterProperty.MAX_JOIN_MERGE_TARGET_SECONDS.getName(), "10");
 
-        NetworkConfig networkConfig = config.getNetworkConfig();
-        networkConfig.getJoin().getMulticastConfig().setEnabled(multicastEnabled);
-        networkConfig.getJoin().getTcpIpConfig().setEnabled(!multicastEnabled).addMember("127.0.0.1");
+            JoinConfig joinConfig = config.getNetworkConfig().getJoin();
+            joinConfig.getMulticastConfig().setEnabled(multicastEnabled);
+            joinConfig.getTcpIpConfig().setEnabled(!multicastEnabled).addMember("127.0.0.1");
+            return config;
+        };
 
-        final HazelcastInstance hz1 = newHazelcastInstance(config, "test-node1", new FirewallingNodeContext());
-        HazelcastInstance hz2 = newHazelcastInstance(config, "test-node2", new FirewallingNodeContext());
-        HazelcastInstance hz3 = newHazelcastInstance(config, "test-node3", new FirewallingNodeContext());
+        final HazelcastInstance hz1 = newHazelcastInstance(configFn.apply("test-node1"));
+        HazelcastInstance hz2 = newHazelcastInstance(configFn.apply("test-node2"));
+        HazelcastInstance hz3 = newHazelcastInstance(configFn.apply("test-node3"));
 
         assertClusterSize(3, hz1, hz3);
         assertClusterSizeEventually(3, hz2);
@@ -467,11 +466,11 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
     public void testClusterMerge_ignoresLiteMembers() {
         String clusterName = generateRandomString(10);
 
-        HazelcastInstance lite1 = newHazelcastInstance(buildConfig(clusterName, true), "lite1", new FirewallingNodeContext());
-        HazelcastInstance lite2 = newHazelcastInstance(buildConfig(clusterName, true), "lite2", new FirewallingNodeContext());
-        HazelcastInstance data1 = newHazelcastInstance(buildConfig(clusterName, false), "data1", new FirewallingNodeContext());
-        HazelcastInstance data2 = newHazelcastInstance(buildConfig(clusterName, false), "data2", new FirewallingNodeContext());
-        HazelcastInstance data3 = newHazelcastInstance(buildConfig(clusterName, false), "data3", new FirewallingNodeContext());
+        HazelcastInstance lite1 = newHazelcastInstance(buildConfig(clusterName, true, "lite1"));
+        HazelcastInstance lite2 = newHazelcastInstance(buildConfig(clusterName, true, "lite2"));
+        HazelcastInstance data1 = newHazelcastInstance(buildConfig(clusterName, false, "data1"));
+        HazelcastInstance data2 = newHazelcastInstance(buildConfig(clusterName, false, "data2"));
+        HazelcastInstance data3 = newHazelcastInstance(buildConfig(clusterName, false, "data3"));
 
         assertClusterSize(5, lite1, data3);
         assertClusterSizeEventually(5, lite2, data1, data2);
@@ -524,9 +523,9 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
     public void testClustersShouldNotMergeWhenBiggerClusterIsNotActive() {
         String clusterName = generateRandomString(10);
 
-        final HazelcastInstance hz1 = newHazelcastInstance(buildConfig(clusterName, false), "hz1", new FirewallingNodeContext());
-        final HazelcastInstance hz2 = newHazelcastInstance(buildConfig(clusterName, false), "hz2", new FirewallingNodeContext());
-        final HazelcastInstance hz3 = newHazelcastInstance(buildConfig(clusterName, false), "hz3", new FirewallingNodeContext());
+        final HazelcastInstance hz1 = newHazelcastInstance(buildConfig(clusterName, false, "hz1"));
+        final HazelcastInstance hz2 = newHazelcastInstance(buildConfig(clusterName, false, "hz2"));
+        final HazelcastInstance hz3 = newHazelcastInstance(buildConfig(clusterName, false, "hz3"));
 
         assertClusterSize(3, hz1, hz3);
         assertClusterSizeEventually(3, hz2);
@@ -560,9 +559,9 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
     public void testClustersShouldNotMergeWhenSmallerClusterIsNotActive() {
         String clusterName = generateRandomString(10);
 
-        final HazelcastInstance hz1 = newHazelcastInstance(buildConfig(clusterName, false), "hz1", new FirewallingNodeContext());
-        final HazelcastInstance hz2 = newHazelcastInstance(buildConfig(clusterName, false), "hz2", new FirewallingNodeContext());
-        final HazelcastInstance hz3 = newHazelcastInstance(buildConfig(clusterName, false), "hz3", new FirewallingNodeContext());
+        final HazelcastInstance hz1 = newHazelcastInstance(buildConfig(clusterName, false, "hz1"));
+        final HazelcastInstance hz2 = newHazelcastInstance(buildConfig(clusterName, false, "hz2"));
+        final HazelcastInstance hz3 = newHazelcastInstance(buildConfig(clusterName, false, "hz3"));
 
         assertClusterSize(3, hz1, hz3);
         assertClusterSizeEventually(3, hz2);
@@ -592,12 +591,13 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
         }, 10);
     }
 
-    private Config buildConfig(final String clusterName, final boolean liteMember) {
+    private Config buildConfig(String clusterName, boolean liteMember, String instanceName) {
         Config config = smallInstanceConfigWithoutJetAndMetrics();
         config.setProperty(ClusterProperty.MERGE_FIRST_RUN_DELAY_SECONDS.getName(), "5");
         config.setProperty(ClusterProperty.MERGE_NEXT_RUN_DELAY_SECONDS.getName(), "3");
         config.setClusterName(clusterName);
         config.setLiteMember(liteMember);
+        config.setInstanceName(instanceName);
 
         NetworkConfig networkConfig = config.getNetworkConfig();
         JoinConfig join = networkConfig.getJoin();
@@ -613,23 +613,26 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
     @Test
     // https://github.com/hazelcast/hazelcast/issues/8137
     public void testClusterMerge_when_split_not_detected_by_slave() {
-        Config config = smallInstanceConfigWithoutJetAndMetrics();
         String clusterName = generateRandomString(10);
-        config.setClusterName(clusterName);
-        config.setProperty(ClusterProperty.MERGE_FIRST_RUN_DELAY_SECONDS.getName(), "10");
-        config.setProperty(ClusterProperty.MERGE_NEXT_RUN_DELAY_SECONDS.getName(), "10");
-        config.setProperty(ClusterProperty.MAX_NO_HEARTBEAT_SECONDS.getName(), "15");
-        config.setProperty(ClusterProperty.MAX_JOIN_SECONDS.getName(), "10");
-        config.setProperty(ClusterProperty.MAX_JOIN_MERGE_TARGET_SECONDS.getName(), "10");
+        Function<String, Config> configFn = instanceName -> {
+            Config config = smallInstanceConfigWithoutJetAndMetrics();
+            config.setClusterName(clusterName);
+            config.setInstanceName(instanceName);
+            config.setProperty(ClusterProperty.MERGE_FIRST_RUN_DELAY_SECONDS.getName(), "10");
+            config.setProperty(ClusterProperty.MERGE_NEXT_RUN_DELAY_SECONDS.getName(), "10");
+            config.setProperty(ClusterProperty.MAX_NO_HEARTBEAT_SECONDS.getName(), "15");
+            config.setProperty(ClusterProperty.MAX_JOIN_SECONDS.getName(), "10");
+            config.setProperty(ClusterProperty.MAX_JOIN_MERGE_TARGET_SECONDS.getName(), "10");
 
-        NetworkConfig networkConfig = config.getNetworkConfig();
-        networkConfig.getJoin().getMulticastConfig().setEnabled(false);
-        networkConfig.getJoin().getTcpIpConfig()
-                .setEnabled(true).addMember("127.0.0.1");
+            JoinConfig joinConfig = config.getNetworkConfig().getJoin();
+            joinConfig.getMulticastConfig().setEnabled(false);
+            joinConfig.getTcpIpConfig().setEnabled(true).addMember("127.0.0.1");
+            return config;
+        };
 
-        HazelcastInstance hz1 = newHazelcastInstance(config, "test-node1", new FirewallingNodeContext());
-        HazelcastInstance hz2 = newHazelcastInstance(config, "test-node2", new FirewallingNodeContext());
-        final HazelcastInstance hz3 = newHazelcastInstance(config, "test-node3", new FirewallingNodeContext());
+        HazelcastInstance hz1 = newHazelcastInstance(configFn.apply("test-node1"));
+        HazelcastInstance hz2 = newHazelcastInstance(configFn.apply("test-node2"));
+        final HazelcastInstance hz3 = newHazelcastInstance(configFn.apply("test-node3"));
 
         assertClusterSize(3, hz1, hz3);
         assertClusterSizeEventually(3, hz2);
@@ -672,26 +675,28 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
     @Test
     // https://github.com/hazelcast/hazelcast/issues/8137
     public void testClusterMerge_when_split_not_detected_by_slave_and_restart_during_merge() {
-        Config config = smallInstanceConfigWithoutJetAndMetrics();
         String clusterName = generateRandomString(10);
-        config.setClusterName(clusterName);
-        config.setProperty(ClusterProperty.MERGE_FIRST_RUN_DELAY_SECONDS.getName(), "10");
-        config.setProperty(ClusterProperty.MERGE_NEXT_RUN_DELAY_SECONDS.getName(), "10");
-        config.setProperty(ClusterProperty.MAX_NO_HEARTBEAT_SECONDS.getName(), "15");
-        config.setProperty(ClusterProperty.MAX_JOIN_SECONDS.getName(), "40");
-        config.setProperty(ClusterProperty.MAX_JOIN_MERGE_TARGET_SECONDS.getName(), "10");
+        BiFunction<Integer, String, Config> configFn = (port, instanceName) -> {
+            Config config = smallInstanceConfigWithoutJetAndMetrics();
+            config.setClusterName(clusterName);
+            config.setInstanceName(instanceName);
+            config.setProperty(ClusterProperty.MERGE_FIRST_RUN_DELAY_SECONDS.getName(), "10");
+            config.setProperty(ClusterProperty.MERGE_NEXT_RUN_DELAY_SECONDS.getName(), "10");
+            config.setProperty(ClusterProperty.MAX_NO_HEARTBEAT_SECONDS.getName(), "15");
+            config.setProperty(ClusterProperty.MAX_JOIN_SECONDS.getName(), "40");
+            config.setProperty(ClusterProperty.MAX_JOIN_MERGE_TARGET_SECONDS.getName(), "10");
 
-        NetworkConfig networkConfig = config.getNetworkConfig();
-        networkConfig.getJoin().getMulticastConfig().setEnabled(false);
-        networkConfig.getJoin().getTcpIpConfig()
-                .setEnabled(true).addMember("127.0.0.1:5701").addMember("127.0.0.1:5702").addMember("127.0.0.1:5703");
+            NetworkConfig networkConfig = config.getNetworkConfig();
+            networkConfig.setPort(port);
+            networkConfig.getJoin().getMulticastConfig().setEnabled(false);
+            networkConfig.getJoin().getTcpIpConfig().setEnabled(true)
+                    .setMembers(List.of("127.0.0.1:5701", "127.0.0.1:5702", "127.0.0.1:5703"));
+            return config;
+        };
 
-        networkConfig.setPort(5702);
-        HazelcastInstance hz2 = newHazelcastInstance(config, "test-node2", new FirewallingNodeContext());
-        networkConfig.setPort(5703);
-        HazelcastInstance hz3 = newHazelcastInstance(config, "test-node3", new FirewallingNodeContext());
-        networkConfig.setPort(5701);
-        final HazelcastInstance hz1 = newHazelcastInstance(config, "test-node1", new FirewallingNodeContext());
+        HazelcastInstance hz2 = newHazelcastInstance(configFn.apply(5702, "test-node2"));
+        HazelcastInstance hz3 = newHazelcastInstance(configFn.apply(5703, "test-node3"));
+        final HazelcastInstance hz1 = newHazelcastInstance(configFn.apply(5701, "test-node1"));
 
         assertClusterSize(3, hz2, hz1);
         assertClusterSizeEventually(3, hz3);
@@ -711,15 +716,12 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
 
         final CountDownLatch mergingLatch = new CountDownLatch(1);
         final CountDownLatch mergeLatch = new CountDownLatch(1);
-        LifecycleListener lifecycleListener = event -> {
-            if (event.getState() == LifecycleState.MERGING) {
-                mergingLatch.countDown();
+        hz1.getLifecycleService().addLifecycleListener(event -> {
+            switch (event.getState()) {
+                case MERGING -> mergingLatch.countDown();
+                case MERGED -> mergeLatch.countDown();
             }
-            if (event.getState() == LifecycleState.MERGED) {
-                mergeLatch.countDown();
-            }
-        };
-        hz1.getLifecycleService().addLifecycleListener(lifecycleListener);
+        });
 
         blockCommunicationBetween(hz1, hz2);
         blockCommunicationBetween(hz1, hz3);
@@ -736,7 +738,7 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
 
         assertOpenEventually(mergingLatch, 60);
         hz2.getLifecycleService().terminate();
-        hz2 = newHazelcastInstance(config, "test-node2", new FirewallingNodeContext());
+        hz2 = newHazelcastInstance(configFn.apply(5702, "test-node2"));
 
         assertOpenEventually(mergeLatch);
         assertClusterSizeEventually(3, hz1, hz2, hz3);
@@ -751,25 +753,25 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
         Config configB = createSimpleTcpIpConfig("cluster_B");
 
         // Start 2 clusters, with 2 members each
-        HazelcastInstance a1 = Hazelcast.newHazelcastInstance(configA);
-        HazelcastInstance a2 = Hazelcast.newHazelcastInstance(configA);
-        HazelcastInstance b1 = Hazelcast.newHazelcastInstance(configB);
-        HazelcastInstance b2 = Hazelcast.newHazelcastInstance(configB);
+        HazelcastInstance a1 = newHazelcastInstance(configA);
+        HazelcastInstance a2 = newHazelcastInstance(configA);
+        HazelcastInstance b1 = newHazelcastInstance(configB);
+        HazelcastInstance b2 = newHazelcastInstance(configB);
 
         // Fetch the port of a2
         Address a2Address = getNode(a2).getThisAddress();
 
         // Confirm that A2 is blacklisted by B1 after a SplitBrainHandler run (due to cluster mismatch)
         Joiner joinerB1 = getNode(b1).getJoiner();
-        assertTrueEventually("Node A2 has not been blacklisted by Node B1!",
-                () -> assertTrue(joinerB1.isBlacklisted(a2Address)), 6);
+        assertTrueEventually(() ->
+                assertTrue("Node A2 has not been blacklisted by Node B1!", joinerB1.isBlacklisted(a2Address)), 6);
 
         // Confirm that A2's address is not returned in the list of filtered addresses used in SplitBrainHandler
         assertFalse(((TcpIpJoiner) joinerB1).getFilteredPossibleAddresses().contains(a2Address));
 
         // Shutdown A2, and start B3, which should be on the same address/port
         a2.shutdown();
-        HazelcastInstance b3 = Hazelcast.newHazelcastInstance(configB);
+        HazelcastInstance b3 = newHazelcastInstance(configB);
 
         // Confirm b3 is running on the address/port previously occupied by a2
         Address b3Address = getNode(b3).getThisAddress();
@@ -779,8 +781,8 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
         assertClusterSizeEventually(3, b1, b2, b3);
 
         // Confirm that B3's address is not blacklisted on B1, allowing SplitBrainHandler checks
-        assertTrueEventually("Node B3 is still blacklisted by Node B1!",
-                () -> assertFalse(joinerB1.isBlacklisted(b3Address)), 6);
+        assertTrueEventually(() ->
+                assertFalse("Node B3 is still blacklisted by Node B1!", joinerB1.isBlacklisted(b3Address)), 6);
     }
 
     private Config createSimpleTcpIpConfig(String clusterName) {
@@ -791,18 +793,12 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
         tcpIpConfig.setMembers(List.of("127.0.0.1"));
         config.getNetworkConfig().setPortAutoIncrement(true);
         config.getNetworkConfig().getJoin().setTcpIpConfig(tcpIpConfig);
-        config.setProperty("hazelcast.merge.first.run.delay.seconds", "3");
-        config.setProperty("hazelcast.merge.next.run.delay.seconds", "3");
+        config.setProperty(ClusterProperty.MERGE_FIRST_RUN_DELAY_SECONDS.getName(), "3");
+        config.setProperty(ClusterProperty.MERGE_NEXT_RUN_DELAY_SECONDS.getName(), "3");
         return config;
     }
 
-    public static class MergedEventLifeCycleListener implements LifecycleListener {
-
-        private final CountDownLatch mergeLatch;
-
-        MergedEventLifeCycleListener(CountDownLatch mergeLatch) {
-            this.mergeLatch = mergeLatch;
-        }
+    public record MergedEventLifeCycleListener(CountDownLatch mergeLatch) implements LifecycleListener {
 
         @Override
         public void stateChanged(LifecycleEvent event) {
@@ -812,13 +808,7 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
         }
     }
 
-    private static class MemberRemovedMembershipListener implements MembershipListener {
-
-        private final CountDownLatch splitLatch;
-
-        MemberRemovedMembershipListener(CountDownLatch splitLatch) {
-            this.splitLatch = splitLatch;
-        }
+    private record MemberRemovedMembershipListener(CountDownLatch splitLatch) implements MembershipListener {
 
         @Override
         public void memberAdded(MembershipEvent membershipEvent) {
@@ -828,7 +818,6 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
         public void memberRemoved(MembershipEvent membershipEvent) {
             splitLatch.countDown();
         }
-
     }
 
     private void testClusterMerge(boolean advancedNetwork, boolean multicast) {
@@ -840,8 +829,8 @@ public class SplitBrainHandlerTest extends HazelcastTestSupport {
         String secondClusterName = generateRandomString(10);
         config2.setClusterName(secondClusterName);
 
-        HazelcastInstance h1 = Hazelcast.newHazelcastInstance(config1);
-        HazelcastInstance h2 = Hazelcast.newHazelcastInstance(config2);
+        HazelcastInstance h1 = newHazelcastInstance(config1);
+        HazelcastInstance h2 = newHazelcastInstance(config2);
         LifecycleCountingListener l = new LifecycleCountingListener();
         h2.getLifecycleService().addLifecycleListener(l);
 
